force-app/main/default/objects/custom_create190__c/custom_create190__c.object-meta.xml
<CustomObject>
    <label>Custom created object190</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects190</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>