force-app/main/default/objects/custom_create190__c/fields/custom_create_190field616__c.field-meta.xml
<CustomField>
    <fullName>custom_create_190field616__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 190field616</label>
    <type>Checkbox</type>
</CustomField>