force-app/main/default/objects/custom_create190__c/fields/custom_create_190field646__c.field-meta.xml
<CustomField>
    <fullName>custom_create_190field646__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 190field646</label>
    <type>Checkbox</type>
</CustomField>